OrderServMaster/VPC-Subnet.json
{
    "AWSTemplateFormatVersion": "2010-09-09",
	"Description": "AWS CloudFormation Template for VPC",
    "Parameters": {
        "Environment": {
            "Description": "An environment name that is prefixed to resource names",
            "Type": "String"
        },
        "VpcCIDR": {
            "Description": "Please enter the IP range (CIDR notation) for this VPC",
            "Type": "String",
            "Default": "10.0.0.0/16"
        },
        "PublicSubnet1CIDR": {
            "Description": "Please enter the IP range (CIDR notation) for the public subnet in the first Availability Zone",
            "Type": "String",
            "Default": "10.0.1.0/24"
        },
        "PublicSubnet2CIDR": {
            "Description": "Please enter the IP range (CIDR notation) for the public subnet in the second Availability Zone",
            "Type": "String",
            "Default": "10.0.2.0/24"
        },
        "PrivateAppSubnet1CIDR": {
            "Description": "Please enter the IP range (CIDR notation) for the private subnet in the first Availability Zone",
            "Type": "String",
            "Default": "10.0.3.0/24"
        },
        "PrivateAppSubnet2CIDR": {
            "Description": "Please enter the IP range (CIDR notation) for the private subnet in the second Availability Zone",
            "Type": "String",
            "Default": "10.0.4.0/24"
        },
        "PrivateDBSubnet1CIDR": {
            "Description": "Please enter the IP range (CIDR notation) for the private subnet in the first Availability Zone",
            "Type": "String",
            "Default": "10.0.5.0/24"
        },
        "PrivateDBSubnet2CIDR": {
            "Description": "Please enter the IP range (CIDR notation) for the private subnet in the second Availability Zone",
            "Type": "String",
            "Default": "10.0.6.0/24"
        },
        "AppName": {
            "Description": "Application Name",
            "Type": "String",
            "Default": "order-serv"
        }
    },
    "Resources": {
        "VPC": {
            "Type": "AWS::EC2::VPC",
            "Properties": {
                "CidrBlock": {
                    "Ref": "VpcCIDR"
                },
                "EnableDnsSupport": true,
                "EnableDnsHostnames": true,
                "Tags": [
                    {
                        "Key": "Environment",
                        "Value": {
                            "Ref": "Environment"
                        }
                    },
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Sub": "orderserv-${Environment}-VPC"
                        }
                    },
                    {
                        "Key": "AppName",
                        "Value": {
                            "Ref": "AppName"
                        }
                    },
					{
                        "Key": "Tenant",
                        "Value": "all"
                    }
                ]
            }
        },
        "InternetGateway": {
            "Type": "AWS::EC2::InternetGateway",
            "Properties": {
                "Tags": [
                    {
                        "Key": "Environment",
                        "Value": {
                            "Ref": "Environment"
                        }
                    },
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Sub": "orderserv-${Environment}-IGW"
                        }
                    },
                    {
                        "Key": "AppName",
                        "Value": {
                            "Ref": "AppName"
                        }
                    },
					{
                        "Key": "Tenant",
                        "Value": "all"
                    }
                ]
            }
        },
        "InternetGatewayAttachment": {
            "Type": "AWS::EC2::VPCGatewayAttachment",
            "Properties": {
                "InternetGatewayId": {
                    "Ref": "InternetGateway"
                },
                "VpcId": {
                    "Ref": "VPC"
                }
            }
        },
        "PublicSubnet1": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                },
                "AvailabilityZone": {
                    "Fn::Select": [
                        0,
                        {
                            "Fn::GetAZs": ""
                        }
                    ]
                },
                "CidrBlock": {
                    "Ref": "PublicSubnet1CIDR"
                },
                "MapPublicIpOnLaunch": true,
                "Tags": [
                    {
                        "Key": "Environment",
                        "Value": {
                            "Ref": "Environment"
                        }
                    },
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Sub": "orderserv-${Environment} Public Subnet1(AZ1)"
                        }
                    },
                    {
                        "Key": "AppName",
                        "Value": {
                            "Ref": "AppName"
                        }
                    },
					{
                        "Key": "Tenant",
                        "Value": "all"
                    }
                ]
            }
        },
        "PublicSubnet2": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                },
                "AvailabilityZone": {
                    "Fn::Select": [
                        1,
                        {
                            "Fn::GetAZs": ""
                        }
                    ]
                },
                "CidrBlock": {
                    "Ref": "PublicSubnet2CIDR"
                },
                "MapPublicIpOnLaunch": true,
                "Tags": [
                    {
                        "Key": "Environment",
                        "Value": {
                            "Ref": "Environment"
                        }
                    },
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Sub": "orderserv-${Environment} Public Subnet2(AZ2)"
                        }
                    },
                    {
                        "Key": "AppName",
                        "Value": {
                            "Ref": "AppName"
                        }
                    },
					{
                        "Key": "Tenant",
                        "Value": "all"
                    }
                ]
            }
        },
        "PrivateAppSubnet1": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                },
                "AvailabilityZone": {
                    "Fn::Select": [
                        0,
                        {
                            "Fn::GetAZs": ""
                        }
                    ]
                },
                "CidrBlock": {
                    "Ref": "PrivateAppSubnet1CIDR"
                },
                "MapPublicIpOnLaunch": false,
                "Tags": [
                    {
                        "Key": "Environment",
                        "Value": {
                            "Ref": "Environment"
                        }
                    },
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Sub": "orderserv-${Environment} PrivateAppSubnet1(AZ1)"
                        }
                    },
                    {
                        "Key": "AppName",
                        "Value": {
                            "Ref": "AppName"
                        }
                    },
					{
                        "Key": "Tenant",
                        "Value": "all"
                    }
                ]
            }
        },
        "PrivateAppSubnet2": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                },
                "AvailabilityZone": {
                    "Fn::Select": [
                        1,
                        {
                            "Fn::GetAZs": ""
                        }
                    ]
                },
                "CidrBlock": {
                    "Ref": "PrivateAppSubnet2CIDR"
                },
                "MapPublicIpOnLaunch": false,
                "Tags": [
                    {
                        "Key": "Environment",
                        "Value": {
                            "Ref": "Environment"
                        }
                    },
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Sub": "orderserv-${Environment} PrivateAppSubnet2(AZ2)"
                        }
                    },
                    {
                        "Key": "AppName",
                        "Value": {
                            "Ref": "AppName"
                        }
                    },
					{
                        "Key": "Tenant",
                        "Value": "all"
                    }
                ]
            }
        },
        "PrivateDBSubnet1": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                },
                "AvailabilityZone": {
                    "Fn::Select": [
                        0,
                        {
                            "Fn::GetAZs": ""
                        }
                    ]
                },
                "CidrBlock": {
                    "Ref": "PrivateDBSubnet1CIDR"
                },
                "MapPublicIpOnLaunch": false,
                "Tags": [
                    {
                        "Key": "Environment",
                        "Value": {
                            "Ref": "Environment"
                        }
                    },
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Sub": "orderserv-${Environment} PrivateDBSubnet1(AZ1)"
                        }
                    },
                    {
                        "Key": "AppName",
                        "Value": {
                            "Ref": "AppName"
                        }
                    },
					{
                        "Key": "Tenant",
                        "Value": "all"
                    }
                ]
            }
        },
        "PrivateDBSubnet2": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                },
                "AvailabilityZone": {
                    "Fn::Select": [
                        1,
                        {
                            "Fn::GetAZs": ""
                        }
                    ]
                },
                "CidrBlock": {
                    "Ref": "PrivateDBSubnet2CIDR"
                },
                "MapPublicIpOnLaunch": false,
                "Tags": [
                    {
                        "Key": "Environment",
                        "Value": {
                            "Ref": "Environment"
                        }
                    },
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Sub": "orderserv-${Environment} PrivateDBSubnet2(AZ2)"
                        }
                    },
                    {
                        "Key": "AppName",
                        "Value": {
                            "Ref": "AppName"
                        }
                    },
					{
                        "Key": "Tenant",
                        "Value": "all"
                    }
                ]
            }
        },
        "NatGateway1EIP": {
            "Type": "AWS::EC2::EIP",
            "Properties": {
                "Domain": "vpc",
                "Tags": [
                    {
                        "Key": "Environment",
                        "Value": {
                            "Ref": "Environment"
                        }
                    },
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Sub": "orderserv-${Environment} EIP1"
                        }
                    },
                    {
                        "Key": "AppName",
                        "Value": {
                            "Ref": "AppName"
                        }
                    },
					{
                        "Key": "Tenant",
                        "Value": "all"
                    }
                ]
            }
        },
        "NatGateway2EIP": {
            "Type": "AWS::EC2::EIP",
            "Properties": {
                "Domain": "vpc",
                "Tags": [
                    {
                        "Key": "Environment",
                        "Value": {
                            "Ref": "Environment"
                        }
                    },
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Sub": "orderserv-${Environment} EIP2"
                        }
                    },
                    {
                        "Key": "AppName",
                        "Value": {
                            "Ref": "AppName"
                        }
                    },
					{
                        "Key": "Tenant",
                        "Value": "all"
                    }
                ]
            }
        },
        "NatGateway1": {
            "Type": "AWS::EC2::NatGateway",
			"DependsOn": "NatGateway1EIP",
            "Properties": {
                "AllocationId": {
                    "Fn::GetAtt": [
                        "NatGateway1EIP",
                        "AllocationId"
                    ]
                },
                "SubnetId": {
                    "Ref": "PublicSubnet1"
                },
				"Tags": [
                    {
                        "Key": "Environment",
                        "Value": {
                            "Ref": "Environment"
                        }
                    },
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Sub": "orderserv-${Environment}-NatGateway1"
                        }
                    },
                    {
                        "Key": "AppName",
                        "Value": {
                            "Ref": "AppName"
                        }
                    },
					{
                        "Key": "Tenant",
                        "Value": "all"
                    }
                ]
            }
        },
        "NatGateway2": {
            "Type": "AWS::EC2::NatGateway",
			"DependsOn": "NatGateway2EIP",
            "Properties": {
                "AllocationId": {
                    "Fn::GetAtt": [
                        "NatGateway2EIP",
                        "AllocationId"
                    ]
                },
                "SubnetId": {
                    "Ref": "PublicSubnet2"
                },
				"Tags": [
                    {
                        "Key": "Environment",
                        "Value": {
                            "Ref": "Environment"
                        }
                    },
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Sub": "orderserv-${Environment}-NatGateway2"
                        }
                    },
                    {
                        "Key": "AppName",
                        "Value": {
                            "Ref": "AppName"
                        }
                    },
					{
                        "Key": "Tenant",
                        "Value": "all"
                    }
                ]
            }
        },
        "PublicRouteTable": {
            "Type": "AWS::EC2::RouteTable",
			"DependsOn": "VPC",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                },
                "Tags": [
                    {
                        "Key": "Environment",
                        "Value": {
                            "Ref": "Environment"
                        }
                    },
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Sub": "orderserv-${Environment}-Public Routes"
                        }
                    },
                    {
                        "Key": "AppName",
                        "Value": {
                            "Ref": "AppName"
                        }
                    },
					{
                        "Key": "Tenant",
                        "Value": "all"
                    }
                ]
            }
        },
        "DefaultPublicRoute": {
            "Type": "AWS::EC2::Route",
            "DependsOn": "InternetGatewayAttachment",
            "Properties": {
                "RouteTableId": {
                    "Ref": "PublicRouteTable"
                },
                "DestinationCidrBlock": "0.0.0.0/0",
                "GatewayId": {
                    "Ref": "InternetGateway"
                }
            }
        },
        "PublicSubnet1RouteTableAssociation": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
			"DependsOn": "PublicRouteTable",
            "Properties": {
                "RouteTableId": {
                    "Ref": "PublicRouteTable"
                },
                "SubnetId": {
                    "Ref": "PublicSubnet1"
                }
            }
        },
        "PublicSubnet2RouteTableAssociation": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
			"DependsOn": "PublicRouteTable",
            "Properties": {
                "RouteTableId": {
                    "Ref": "PublicRouteTable"
                },
                "SubnetId": {
                    "Ref": "PublicSubnet2"
                }
            }
        },
        "PrivateRouteTable1": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                },
                "Tags": [
                    {
                        "Key": "Environment",
                        "Value": {
                            "Ref": "Environment"
                        }
                    },
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Sub": "orderserv-${Environment}-Private Routes(AZ1)"
                        }
                    },
                    {
                        "Key": "AppName",
                        "Value": {
                            "Ref": "AppName"
                        }
                    },
					{
                        "Key": "Tenant",
                        "Value": "all"
                    }
                ]
            }
        },
        "DefaultPrivateRoute1": {
            "Type": "AWS::EC2::Route",
            "Properties": {
                "RouteTableId": {
                    "Ref": "PrivateRouteTable1"
                },
                "DestinationCidrBlock": "0.0.0.0/0",
                "NatGatewayId": {
                    "Ref": "NatGateway1"
                }
            }
        },
        "PrivateSubnet1RouteTableAssociation": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
			"DependsOn": "PrivateRouteTable1",
            "Properties": {
                "RouteTableId": {
                    "Ref": "PrivateRouteTable1"
                },
                "SubnetId": {
                    "Ref": "PrivateAppSubnet1"
                }
            }
        },
        "PrivateRouteTable2": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                },
                "Tags": [
                    {
                        "Key": "Environment",
                        "Value": {
                            "Ref": "Environment"
                        }
                    },
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Sub": "orderserv-${Environment}-Private Routes(AZ2)"
                        }
                    },
                    {
                        "Key": "AppName",
                        "Value": {
                            "Ref": "AppName"
                        }
                    },
					{
                        "Key": "Tenant",
                        "Value": "all"
                    }
                ]
            }
        },
        "DefaultPrivateRoute2": {
            "Type": "AWS::EC2::Route",
			"DependsOn": "NatGateway2", 
			"Properties": {
                "RouteTableId": {
                    "Ref": "PrivateRouteTable2"
                },
                "DestinationCidrBlock": "0.0.0.0/0",
                "NatGatewayId": {
                    "Ref": "NatGateway2"
                }
            }
        },
        "PrivateSubnet2RouteTableAssociation": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
			"DependsOn": "PrivateRouteTable2",
            "Properties": {
                "RouteTableId": {
                    "Ref": "PrivateRouteTable2"
                },
                "SubnetId": {
                    "Ref": "PrivateAppSubnet2"
                }
            }
        },
        "PrivateDBRouteTable1": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                },
                "Tags": [
                    {
                        "Key": "Environment",
                        "Value": {
                            "Ref": "Environment"
                        }
                    },
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Sub": "orderserv-${Environment}-Private DB Routes(AZ1)"
                        }
                    },
                    {
                        "Key": "AppName",
                        "Value": {
                            "Ref": "AppName"
                        }
                    },
					{
                        "Key": "Tenant",
                        "Value": "all"
                    }
                ]
            }
        },
        "DefaultDBPrivateRoute1": {
            "Type": "AWS::EC2::Route",
			"DependsOn": "NatGateway1",
            "Properties": {
                "RouteTableId": {
                    "Ref": "PrivateDBRouteTable1"
                },
                "DestinationCidrBlock": "0.0.0.0/0",
                "NatGatewayId": {
                    "Ref": "NatGateway1"
                }
            }
        },
        "PrivateDBSubnet1RouteTableAssociation": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
			"DependsOn": "PrivateDBRouteTable1",
            "Properties": {
                "RouteTableId": {
                    "Ref": "PrivateDBRouteTable1"
                },
                "SubnetId": {
                    "Ref": "PrivateDBSubnet1"
                }
            }
        },
        "PrivateDBRouteTable2": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                },
                "Tags": [
                    {
                        "Key": "Environment",
                        "Value": {
                            "Ref": "Environment"
                        }
                    },
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Sub": "orderserv-${Environment}-Private DB Routes(AZ2)"
                        }
                    },
                    {
                        "Key": "AppName",
                        "Value": {
                            "Ref": "AppName"
                        }
                    },
					{
                        "Key": "Tenant",
                        "Value": "all"
                    }
                ]
            }
        },
        "DefaultDBPrivateRoute2": {
            "Type": "AWS::EC2::Route",
            "Properties": {
                "RouteTableId": {
                    "Ref": "PrivateDBRouteTable2"
                },
                "DestinationCidrBlock": "0.0.0.0/0",
                "NatGatewayId": {
                    "Ref": "NatGateway2"
                }
            }
        },
        "PrivateDBSubnet2RouteTableAssociation": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
			"DependsOn": "PrivateDBRouteTable2",
            "Properties": {
                "RouteTableId": {
                    "Ref": "PrivateDBRouteTable2"
                },
                "SubnetId": {
                    "Ref": "PrivateDBSubnet2"
                }
            }
        }
    },
    "Outputs": {
        "VPC01": {
            "Description": "A reference to the created VPC",
            "Value": {
                "Ref": "VPC"
            }
        },
        "PublicSubnets": {
            "Description": "A list of the public subnets",
            "Value": {
                "Fn::Join": [
                    ",",
                    [
                        {
                            "Ref": "PublicSubnet1"
                        },
                        {
                            "Ref": "PublicSubnet2"
                        }
                    ]
                ]
            }
        },
        "PrivateAppSubnets": {
            "Description": "A list of the private Application subnets",
            "Value": {
                "Fn::Join": [
                    ",",
                    [
                        {
                            "Ref": "PrivateAppSubnet1"
                        },
                        {
                            "Ref": "PrivateAppSubnet2"
                        }
                    ]
                ]
            }
        },
        "PrivateDBSubnets": {
            "Description": "A list of the private Application subnets",
            "Value": {
                "Fn::Join": [
                    ",",
                    [
                        {
                            "Ref": "PrivateDBSubnet1"
                        },
                        {
                            "Ref": "PrivateDBSubnet2"
                        }
                    ]
                ]
            }
        },
        "PublicSubnet1": {
            "Description": "A reference to the public subnet in the 1st Availability Zone",
            "Value": {
                "Ref": "PublicSubnet1"
            }
        },
        "PublicSubnet2": {
            "Description": "A reference to the public subnet in the 2nd Availability Zone",
            "Value": {
                "Ref": "PublicSubnet2"
            }
        },
        "PrivateAppSubnet1": {
            "Description": "A reference to the private App subnet in the 1st Availability Zone",
            "Value": {
                "Ref": "PrivateAppSubnet1"
            }
        },
        "PrivateAppSubnet2": {
            "Description": "A reference to the private App subnet in the 2nd Availability Zone",
            "Value": {
                "Ref": "PrivateAppSubnet2"
            }
        },
        "PrivateDBSubnet1": {
            "Description": "A reference to the private DB subnet in the 1st Availability Zone",
            "Value": {
                "Ref": "PrivateDBSubnet1"
            }
        },
        "PrivateDBSubnet2": {
            "Description": "A reference to the private DB subnet in the 2nd Availability Zone",
            "Value": {
                "Ref": "PrivateDBSubnet2"
            }
        },
		"PrivateRouteTable1" :{
			"Description": "A reference to the private App Route Table in the 1st Availability Zone",
            "Value": {
                "Ref": "PrivateRouteTable1"
            }
		
		},
		"PrivateRouteTable2" :{
			"Description": "A reference to the private App Route Table in the 2nd Availability Zone",
            "Value": {
                "Ref": "PrivateRouteTable2"
            }
		
		}
    }
}
